[gd_scene load_steps=12 format=3 uid="uid://b3brubriacfvw"]

[ext_resource type="Script" path="res://attack.gd" id="1_cp4ja"]
[ext_resource type="Script" path="res://command_menu.gd" id="1_wh3e0"]
[ext_resource type="Script" path="res://magic.gd" id="2_py1mr"]
[ext_resource type="Texture2D" uid="uid://cedvv213vaddm" path="res://Graphics/Windowskins/Window (2).png" id="4_dv7mv"]
[ext_resource type="Script" path="res://skills_window.gd" id="5_q7h2t"]
[ext_resource type="Script" path="res://label_1.gd" id="6_yv0c8"]
[ext_resource type="Script" path="res://label_2.gd" id="7_1nvq5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vha6y"]
bg_color = Color(0.113725, 0, 0.921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6ds0"]
bg_color = Color(0.113725, 0, 0.921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvwxu"]
bg_color = Color(0.113725, 0, 0.921569, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nolgo"]
size = Vector2(67, 24)

[node name="command_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wh3e0")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D"]
custom_minimum_size = Vector2(67, 0)
offset_left = 500.0
offset_top = 530.0
offset_right = 567.0
offset_bottom = 631.0

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/MarginContainer"]
self_modulate = Color(0.215686, 0.215686, 0.215686, 1)
layout_mode = 2
focus_neighbor_left = NodePath("attack")
focus_neighbor_top = NodePath("item")

[node name="attack" type="Button" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vha6y")
text = "Attack"
script = ExtResource("1_cp4ja")

[node name="skills" type="Button" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_k6ds0")
text = "Skills"
script = ExtResource("2_py1mr")

[node name="item" type="Button" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kvwxu")
text = "Items"

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="collision_attack" type="CollisionShape2D" parent="Area2D"]
position = Vector2(533.5, 542)
shape = SubResource("RectangleShape2D_nolgo")

[node name="collision_skills" type="CollisionShape2D" parent="Area2D"]
position = Vector2(533, 569)
shape = SubResource("RectangleShape2D_nolgo")

[node name="collision_items" type="CollisionShape2D" parent="Area2D"]
position = Vector2(533, 596)
shape = SubResource("RectangleShape2D_nolgo")

[node name="skills" type="Control" parent="."]
anchors_preset = 0
offset_left = 662.0
offset_top = 523.0
offset_right = 689.0
offset_bottom = 537.0

[node name="skills_window" type="Sprite2D" parent="skills"]
position = Vector2(-107, 55)
scale = Vector2(0.571984, 0.194059)
texture = ExtResource("4_dv7mv")
script = ExtResource("5_q7h2t")

[node name="HBoxContainer" type="HBoxContainer" parent="skills/skills_window"]
offset_left = -242.0
offset_top = -222.0
offset_right = -198.0
offset_bottom = -129.0
scale = Vector2(2, 2)
size_flags_stretch_ratio = 1.18

[node name="VBoxContainer" type="VBoxContainer" parent="skills/skills_window/HBoxContainer"]
layout_mode = 2

[node name="skill_1" type="Button" parent="skills/skills_window/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "

"

[node name="label_1" type="Label" parent="skills/skills_window/HBoxContainer/VBoxContainer/skill_1"]
layout_mode = 0
offset_right = 69.0
offset_bottom = 31.0
script = ExtResource("6_yv0c8")

[node name="skill_2" type="Button" parent="skills/skills_window/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "

"

[node name="label_2" type="Label" parent="skills/skills_window/HBoxContainer/VBoxContainer/skill_2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("7_1nvq5")

[node name="VBoxContainer2" type="VBoxContainer" parent="skills/skills_window/HBoxContainer"]
layout_mode = 2

[node name="items" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.035
anchor_top = 0.031
anchor_right = 0.035
anchor_bottom = 0.031
offset_left = 381.68
offset_top = 325.912
offset_right = 421.68
offset_bottom = 365.912

[connection signal="pressed" from="Sprite2D/MarginContainer/VBoxContainer/attack" to="Sprite2D/MarginContainer/VBoxContainer/attack" method="_on_pressed"]
[connection signal="pressed" from="Sprite2D/MarginContainer/VBoxContainer/skills" to="." method="_on_skills_pressed"]
[connection signal="child_entered_tree" from="Area2D/collision_attack" to="Sprite2D/MarginContainer/VBoxContainer/attack" method="_on_collision_attack_child_entered_tree"]
